--- a/main.css
+++ b/main.css
@@ -17,8 +17,20 @@
   border: 1px solid black;
   margin-top: 40px;
   display: flex;
+  flex-direction: column; /* Modificare */
+  align-items: center; /* Modificare */
+}
+
+.dealer-cards, .player-cards {
+  margin-top: 80px;
+  display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.total-dealer, .total-player {
+  margin-top: 30px; /* Modificare */
+  font-size: 30px;
 }
 
 .helpers button {
@@ -34,8 +46,8 @@
 }
 
 .result {
-  padding: 10px;
-  margin: 10px 10px 10px 210px;
+  padding: 17px 10px 10px 10px;
+  margin: 10px 10px 10px 200px;
   text-align: center;
   border: 1px solid black;
   width: 200px; /* Poți ajusta dimensiunea în funcție de necesități */
@@ -43,11 +55,12 @@
   color: red;
   font-weight: bold;
   height: 30px;
+  font-size: 18px;
 }
 .cards {
   flex: 1fr;
   margin-left: 20px;
-  font-size: 30px;
+  font-size: 40px;
   border-style: solid;
   border-color: black;
   padding: 5px;
