--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@
 
 .bet {
   display: grid;
-  grid-template-columns: 50px 60px auto;
+  grid-template-columns: 30px 60px auto;
   height: 40px; /* Reducerea înălțimii */
   grid-column-gap: 10px; /* Spațiu între coloane */
   grid-row-gap: 10px;
@@ -94,4 +94,45 @@
 .balance {
   font-size: 20px;
   font-style: bold;
+}
+
+#insurance-notification, #no-blackjack-notification {
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  text-align: center;
+}
+
+#insurance-notification p {
+  margin-bottom: 10px;
+}
+
+#insurance-notification .insurance-input {
+  margin-bottom: 10px; /* Adaugăm spațiu între input și butoane */
+}
+
+#insurance-notification label {
+  display: block; /* Facem ca eticheta să fie un element block pentru a ocupa întreaga lățime disponibilă */
+}
+
+#insurance-notification input {
+  width: 100%; /* Asigurăm ca inputul să ocupe întreaga lățime disponibilă */
+  box-sizing: border-box; /* Includem padding-ul și border-ul în lățimea totală a inputului */
+  padding: 5px; /* Adăugăm puțin spațiu în interiorul inputului */
+  border-radius: 5px; /* Rotunjim colțurile inputului */
+  border: 1px solid #ccc; /* Adăugăm un border pentru a evidenția inputul */
+  margin-bottom: 10px;
+}
+
+#response {
+  background-color: white;
+  border: 1px solid  black;
+  height: 30px;
+  width: 60px;
+  border-radius: 8px;
 }
